# swagger-config.yaml
@@ -9,10 +9,12 @@ info:
 #  - url: http://staging-api.example.com
 #    description: Optional server description, e.g. Internal staging server for testing
 tags:
-  - name: Users 
-    description: /users/* endpoints
   - name: Authentication 
     description: authentication-related endpoints
+  - name: Users 
+    description: /users/* endpoints
+  - name: Movies
+    description: /movies/* endpoints
   - name: Favorites
     description: /favorites/* endpoints
 paths:
@@ -20,7 +22,7 @@ paths:
     post:
       tags:
         - Authentication
-      summary: Authenticates the user.
+      summary: Authenticate the user
       description: User has to be already created
       requestBody:
         required: true
@@ -39,8 +41,8 @@ paths:
     get:
       tags:
         - Users
-      summary: Returns a list of users.
-      description: Requires admin permission.
+      summary: Return a list of users
+      description: Requires admin permission
       security: 
         - bearerAuth: []
       responses:
@@ -52,11 +54,33 @@ paths:
                 type: array
                 items: 
                   $ref: '#/components/schemas/User'
+  /movies:
+    get:
+      tags:
+        - Movies
+      summary: Return a list of movies
+      description: Supports 'search' query parameter
+      parameters:
+        - in: query
+          name: search
+          schema: 
+            type: string
+          description: string to search inside names or descriptions of movies
+      responses:
+        '200':
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Movie'
+  
   /favorites:
     get:
       tags:
         - Favorites
-      summary: Returns favorites of the current user
+      summary: Return favorites of the current user
       description: Requires a valid JWT token
       security:
         - bearerAuth: []
@@ -68,10 +92,86 @@ paths:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/Video'
+                  $ref: '#/components/schemas/Movie'
+        '401':
+          description: Unauthorized   
+  /favorites/{movieId}:
+    post:
+      tags:
+        - Favorites
+      summary: Favorite a selected movie for the current user
+      description: Requires a valid JWT token
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: movieId
+          schema: 
+            type: string
+          required: true
+          description: String ID of the movie to favorite
+      responses:
+        '204':
+          description: Successfully added to favorites
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorsResponse'
+        '401':
+          description: Unauthorized
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorsResponse'
+    delete:
+      tags:
+        - Favorites
+      summary: Delete a selected movie from the favorites of the current user
+      description: Requires a valid JWT token
+      security:
+        - bearerAuth: []
+      parameters:
+        - in: path
+          name: movieId
+          schema: 
+            type: string
+          required: true
+          description: String ID of the movie to delete from favorites
+      responses:
+        '204':
+          description: Successfully deleted from favorites
+        '400':
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorsResponse'
+        '401':
+          description: Unauthorized
+        '404':
+          description: Not Found
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorsResponse'
+          
+
 # Components
 components:
   schemas:
+    ErrorsResponse:
+      title: ErrorResponse
+      type: object
+      properties:
+        errors: 
+          type: array
+          items: 
+            type: string
+            description: Error message
     User:
       title: User
       type: object
@@ -108,8 +208,8 @@ components:
         refreshToken: 
           type: string
           #description: refreshToken 
-    Video:
-      title: Video
+    Movie:
+      title: Movie
       type: object
       properties:
         name:
